--- a/index.html
+++ b/index.html
@@ -35,7 +35,30 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "2868192452";
+    const serviceWorkerVersion = "2227697296";
+  </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyAiB5YVjgiQYvHwLxEhGHVkw3g5v5iyPhU",
+      authDomain: "boindo-webapp.firebaseapp.com",
+      projectId: "boindo-webapp",
+      storageBucket: "boindo-webapp.appspot.com",
+      messagingSenderId: "281474742684",
+      appId: "1:281474742684:web:018e38fabe5e58ac3cb059",
+      measurementId: "G-ZNF2EHCNW7"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
